--- a/acceptor/quickfix.cfg
+++ b/acceptor/quickfix.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
-SenderCompID=CONSUMER_STP
-FileLogPath=./consumer/logs/
-TargetCompID=PRODUCER_STP
+SenderCompID=ACCEPTOR_STP
+FileLogPath=./acceptor/logs/
+TargetCompID=INITIATOR_STP
 EncryptMethod=0
 ResetSeqNumFlag=Y
 TimeZone=Europe/London
