--- a/initiator/quickfix.cfg
+++ b/initiator/quickfix.cfg
@@ -1,8 +1,8 @@
 [DEFAULT]
 ReconnectInterval=5
-SenderCompID=PRODUCER_STP
-FileLogPath=./producer/logs/
-TargetCompID=CONSUMER_STP
+SenderCompID=INITIATOR_STP
+FileLogPath=./initiator/logs/
+TargetCompID=ACCEPTOR_STP
 EncryptMethod=0
 ResetSeqNumFlag=Y
 TimeZone=Europe/London
